azure-pipelines-analyzer/src/syntax/parser/snapshots/azure_pipelines_analyzer__syntax__parser__tests__tag_directive-3.snap
---
source: azure-pipelines-analyzer/src/syntax/parser/tests.rs
expression: parse
---
Parse {
    node: Root@0..4
      DirectiveToken@0..1 "%"
      DirectiveName@1..4 "TAG"
      Error@4..4 ""
    ,
    errors: [
        Diagnostic {
            span: 4..4,
            severity: Error,
            message: "expected tag handle",
        },
    ],
}
