azure-pipelines-analyzer/src/syntax/parser/snapshots/azure_pipelines_analyzer__syntax__parser__tests__tag_property-15.snap
---
source: azure-pipelines-analyzer/src/syntax/parser/tests.rs
expression: parse
---
Parse {
    node: Root@0..6
      TagProperty@0..6
        PrimaryTagHandle@0..1 "!"
        TagSuffix@1..6 "(foo)"
    ,
    errors: [],
}
