azure-pipelines-analyzer/src/syntax/parser/snapshots/azure_pipelines_analyzer__syntax__parser__tests__tag_property-19.snap
---
source: azure-pipelines-analyzer/src/syntax/parser/tests.rs
expression: parse
---
Parse {
    node: Root@0..4
      TagProperty@0..4
        PrimaryTagHandle@0..1 "!"
        TagSuffix@1..4 "foo"
    ,
    errors: [],
}
