azure-pipelines-analyzer/src/syntax/parser/snapshots/azure_pipelines_analyzer__syntax__parser__tests__tag_property-2.snap
---
source: azure-pipelines-analyzer/src/syntax/parser/tests.rs
expression: parse
---
Parse {
    node: Root@0..0
      Error@0..0 ""
    ,
    errors: [
        Diagnostic {
            span: 0..0,
            severity: Error,
            message: "expected '!'",
        },
    ],
}
