azure-pipelines-analyzer/src/syntax/parser/snapshots/azure_pipelines_analyzer__syntax__parser__tests__tag_property-20.snap
---
source: azure-pipelines-analyzer/src/syntax/parser/tests.rs
expression: parse
---
Parse {
    node: Root@0..8
      TagProperty@0..8
        TagToken@0..1 "!"
        NamedTagHandle@1..4 "foo"
        TagToken@4..5 "!"
        TagSuffix@5..8 "bar"
    ,
    errors: [],
}
