azure-pipelines-analyzer/src/syntax/parser/snapshots/azure_pipelines_analyzer__syntax__parser__tests__tag_property-21.snap
---
source: azure-pipelines-analyzer/src/syntax/parser/tests.rs
expression: parse
---
Parse {
    node: Root@0..10
      TagProperty@0..10
        TagToken@0..1 "!"
        NamedTagHandle@1..4 "foo"
        TagToken@4..5 "!"
        TagSuffix@5..10 "(bar)"
    ,
    errors: [],
}
